--- a/contactus.html
+++ b/contactus.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GBS About</title>
+    <title>Contact Us</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/contactus.css">
     <link rel="stylesheet" href="css/privacy.css">
     <style>
-        #upgrade{
-            margin-top: 350px;
+        #upgrade {
+            z-index: 1;
         }
     </style>
 </head>
+
 <body>
-     <!-- NAVBAR -->
+    <!-- NAVBAR -->
     <!-- NEED HELP SECTION -->
     <div class="need">
         <p id="help" onclick="showModle()">Need Help?Request A Callback</p>
@@ -51,6 +54,7 @@
         </div>
     </div>
 
+
     <!-- Logo Section -->
     <div class="logo">
         <img src="image/gbs.png" alt="" id="logo">
@@ -77,7 +81,7 @@
                             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/about.html">About Us</a>
+                            <a class="nav-link" href="about.html">About Us</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="">Product</a>
@@ -89,7 +93,7 @@
                             <a class="nav-link" href="learnBusy.html">Learn Busy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contactus.html">Contact Us</a>
+                            <a class="nav-link" href="/contactus.html">Contact Us</a>
                         </li>
 
                     </ul>
@@ -142,9 +146,15 @@
     </header>
 
 
-       <!--  Upgrad For Software -->
-   
-       <div id="upgrade">
+
+    <!-- Contact us -->
+    <div class="CONTACT">
+        <h2>Contacts Us</h2>
+        <img src="image/GBS-removebg-preview (1).png" alt="" srcset="">
+    </div>
+
+    <!--  Upgrad For Software -->
+    <div id="upgrade">
         <button class="upgrade" onclick="openpo()">Upgrade for Software</button>
 
         <div class="po" id="po">
@@ -169,8 +179,57 @@
         </div>
     </div>
 
-     <!-- footer section -->
-     <footer>
+    <!-- contact us form -->
+    <div id="CONTACT">
+        <form action="">
+            <h5>Contact Us</h5>
+
+            <input type="text" id="name" placeholder="Name">
+            <br>
+            <input type="tel" id="Mobile" placeholder="Number">
+            <br>
+            <input type="Email" id="email" placeholder="Email">
+            <br>
+            <textarea name="Message" id="" cols="30" rows="4">Message</textarea>
+            <br>
+            <button type="submit">SEND</button>
+        </form>
+
+    </div>
+
+    <!--Add map  -->
+    <div class="map">
+        <div id="map">
+            <i class="fa-solid fa-location-dot"></i>
+            <h5>Office Address :</h5>
+            <p>A-212, Shanti Shopping Center, Nr.Railway Station, Mira Road(E), Mumbai.401 107</p>
+        </div>
+        <div id="ma">
+            <i class="fa-solid fa-phone-volume"></i>
+            <h5>Phone Number :</h5>
+            <p>9270052306</p>
+        </div>
+        <div id="m">
+            <i class="fa-solid fa-envelope"></i>
+            <h5>Email Id :</h5>
+            <p>gbs.mumbai@gmail.com</p>
+        </div>
+    
+    </div>
+
+    <!-- Map add -->
+    <div class="contain">
+        <iframe
+        src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3770.369258415034!2d73.02192107387546!3d19.0914500514899!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2s!5e0!3m2!1sen!2sin!4v1713263003201!5m2!1sen!2sin"
+        width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+
+
+
+
+    <!-- footer section -->
+    <footer>
         <div class="footer">
             <div id="footer">
                 <img src="image/GBS-removebg-preview (1).png" alt="" class="footerlogo">
@@ -181,9 +240,9 @@
                 <h2>Useful Link</h2>
                 <ul id="useful">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="/about.html">About Us</a></li>
+                    <li><a href="about.html">About Us</a></li>
                     <li><a href="">Data Hosting</a></li>
-                    <li><a href="contactus.html">Contact Us</a></li>
+                    <li><a href="/contactus.html">Contact Us</a></li>
                     <li><a href="">Busy Integrated Add-Ons</a></li>
                     <li><a href="">BUSY Software Associated Services</a></li>
                 </ul>
@@ -233,7 +292,7 @@
         </p>
     </footer>
 
-
     <script src="js/script.js"></script>
 </body>
+
 </html>
