--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
     <link rel="stylesheet" href="css/index.css">
- 
-
-
 </head>
 
 <body>
@@ -64,7 +61,7 @@
     <!-- Navbar Section -->
 
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="font-family: cursive;">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -79,39 +76,23 @@
                         <li class="nav-item">
                             <a class="nav-link" href="about.html">About Us</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Product & Pricing
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Busy Software</a></li>
-                                <li><a class="dropdown-item" href="#">Busy Online</a></li>
-                                <li><a class="dropdown-item" href="#">Busy Mobile App</a></li>
-                                <li><a class="dropdown-item" href="#">Busy Integrated Add-Ons</a></li>
-                                <li><a class="dropdown-item" href="#">Ts Plus-Remte Access Software</a></li>
-                            </ul>
+                        <li class="nav-item">
+                            <a class="nav-link" href="">Product</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Service
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Busy Software Associated Services</a></li>
-                                <li><a class="dropdown-item" href="#">Data Hosting</a></li>
-                            </ul>
+                        <li class="nav-item">
+                            <a class="nav-link" href="">Service</a>
                         </li>
+                    
                         <li class="nav-item">
                             <a class="nav-link" href="learnBusy.html">Learn Busy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact Us</a>
+                            <a class="nav-link" href="contactus.html">Contact Us</a>
                         </li>
 
                     </ul>
                     <form class="d-flex">
-                        <button onclick="show() ">Enquire
+                        <button onclick="show() " class="now">Enquire
                             Now</button>
                         <div class="over"></div>
                         <div class="login">
@@ -164,22 +145,22 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="image/collection-engine-1.jpg" class="d-block w-100 " alt="...">
+                    <img src="image/Accounting-software-scaled.webp" class="d-block w-100 " alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="image/busy-no-1.jpg" class="d-block w-100 " alt="...">
+                    <img src="image/areas-where-accounting-software-makes-difference-1.png" class="d-block w-100 " alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="image/Slide0.jpg " class="d-block w-100 " alt="...">
+                    <img src="image/Busy-Software-Download.webp " class="d-block w-100 " alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="image/Slide1.jpg " class="d-block w-100 " alt="...">
+                    <img src="image/hq720.jpg " class="d-block w-100 " alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="image/Slide2.jpg " class="d-block w-100 " alt="...">
+                    <img src="image/maxresdefault.jpg " class="d-block w-100 " alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="image/software-for-accountant.jpg" class="d-block w-100 " alt="...">
+                    <img src="image/MicrosoftTeams-image-88.jpg" class="d-block w-100 " alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -266,7 +247,7 @@
                         <div class="card">
                             <img src="image/busy-mobile-app-banner-img-1.png" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Busy Mobile App1</h5>
+                                <h5 class="card-title">Busy Mobile App</h5>
                                 <p class="card-text">Busy Mobile App is a powerful tool that connects with Busy Desktop
                                     Accounting
                                     Software to offer world-class features &amp; experience to customers. allows users
@@ -277,7 +258,7 @@
                         <div class="card">
                             <img src="image/busy-no-1.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Busy Mobile App2</h5>
+                                <h5 class="card-title">Busy Mobile App</h5>
                                 <p class="card-text">Busy Mobile App is a powerful tool that connects with Busy Desktop
                                     Accounting
                                     Software to offer world-class features &amp; experience to customers. allows users
@@ -293,7 +274,7 @@
                         <div class="card">
                             <img src="image/busy-online-banner-1.png" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Busy Mobile App3</h5>
+                                <h5 class="card-title">Busy Mobile App</h5>
                                 <p class="card-text">Busy Mobile App is a powerful tool that connects with Busy Desktop
                                     Accounting
                                     Software to offer world-class features &amp; experience to customers. allows users
@@ -304,7 +285,7 @@
                         <div class="card">
                             <img src="image/busy-to-google-1.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Busy Mobile App4</h5>
+                                <h5 class="card-title">Busy Mobile App</h5>
                                 <p class="card-text">Busy Mobile App is a powerful tool that connects with Busy Desktop
                                     Accounting
                                     Software to offer world-class features &amp; experience to customers. allows users
@@ -319,7 +300,7 @@
                         <div class="card">
                             <img src="image/busy-online-banner-1.png" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Busy Mobile App5</h5>
+                                <h5 class="card-title">Busy Mobile App</h5>
                                 <p class="card-text">Busy Mobile App is a powerful tool that connects with Busy Desktop
                                     Accounting
                                     Software to offer world-class features &amp; experience to customers. allows users
@@ -330,7 +311,7 @@
                         <div class="card">
                             <img src="image/busy-to-google-1.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Busy Mobile App6</h5>
+                                <h5 class="card-title">Busy Mobile App</h5>
                                 <p class="card-text">Busy Mobile App is a powerful tool that connects with Busy Desktop
                                     Accounting
                                     Software to offer world-class features &amp; experience to customers. allows users
@@ -509,17 +490,17 @@
     <footer>
         <div class="footer">
             <div id="footer">
-                <img src="image/gbs.png" alt="" class="footerlogo">
+                <img src="image/GBS-removebg-preview (1).png" alt="" class="footerlogo">
                 <p>GBS, Leading Software Solution provider for SMEs, serving more than 2500 Clients across Mumbai, deals
                     in wide range of Software from Accounting, Taxation, Inventory, Payroll, HRMS and CRM Industry.</p>
             </div>
             <div class="useful">
                 <h2>Useful Link</h2>
                 <ul id="useful">
-                    <li><a href="">Home</a></li>
-                    <li><a href="">About Us</a></li>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
                     <li><a href="">Data Hosting</a></li>
-                    <li><a href="">Contact Us</a></li>
+                    <li><a href="contactus.html">Contact Us</a></li>
                     <li><a href="">Busy Integrated Add-Ons</a></li>
                     <li><a href="">BUSY Software Associated Services</a></li>
                 </ul>
@@ -528,7 +509,7 @@
                 <h2>Quick Link</h2>
                 <ul id="useful">
                     <li><a href="">Terms & Condition</a></li>
-                    <li><a href="">Privacy policy</a></li>
+                    <li><a href="Privacy.html">Privacy policy</a></li>
                 </ul>
             </div>
         </div>
